--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header class= "cabecalho">
-<img clss="cabecalho-imagem" src="bicho-da-seda.png" alt="Bicho-da-seda">
+<img clss="cabecalho-imagem" src="bicho-da-seda.png" alt="Bicho-da-seda" width="800px">
 <ul class="cabecalho-lista">
 <li class="cabecalho-lista-item">Sericultura</li>
 <li class="cabecalho-lista-item">Bicho-da-seda</li>
@@ -22,25 +22,19 @@
         <p class="sericultura-texto dois"></p>Além de gerar emprego na agricultura famíliar, ela gera 21% da soma de toda riqueza produzida no pais.</p>
     
     </div>
-    <img class="Bicho-da-seda-imagem" src="formula.png" alt="">
+    <img class="Bicho-da-seda-imagem" src="formula.png">
 </section>
 <section class="Bicho-da-seda">
     <h2 class="Bicho-da-seda">O que é produzido com a seda?</h2>
-    <div class="Bicho-da-ceda-tudo">
+    <div class="Bicho-da-seda-tudo">
     <span></span>
     <div class="bicho-da-seda-div">
-        <img class="roupa-imagem" src="vestido.jpeg" alt="foto do vestido">
-        <h3 class="roupa-nome"><Vestido-de-seda></Vestido-de-seda></h3>
-        <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-        <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-        <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+        <img class="roupa-imagem" src="vestido.jpeg" alt="foto do vestido" width="200px">
+        <h3 class="roupa-nome"><vestido></h3>
     </div>
-    <div class="estudante-div">
-        <img class="estudante-imagem" src="Gabi.jpg" alt="foto da gabi">
-        <h3 class="estudante-nome">Gabriela</h3>
-        <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-        <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-        <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+    <div class="Bicho-da-seda-div">
+        <img class="calçado-imagem" src="calçado.jpg" alt="foto da sandalia" width="200px">
+        <h3 class="calçado-nome">Sandalia</h3>
     </div>
     <div class="estudante-div">
         <img class="estudante-imagem" src="Liz.jpg" alt="foto da lizandra">
