--- a/index.html
+++ b/index.html
@@ -30,31 +30,26 @@
     <span></span>
     <div class="bicho-da-seda-div">
         <img class="roupa-imagem" src="vestido.jpeg" alt="foto do vestido" width="200px">
-        <h3 class="roupa-nome"><vestido></h3>
+        <h3 class="roupa-nome"><Vestido</h3>
+        <h2 class="Sericultura-titulo">Vestido</h2>
     </div>
-    <div class="Bicho-da-seda-div">
+    <div class="bicho-da-seda-div">
         <img class="calçado-imagem" src="calçado.jpg" alt="foto da sandalia" width="200px">
         <h3 class="calçado-nome">Sandalia</h3>
     </div>
-    <div class="estudante-div">
-        <img class="estudante-imagem" src="Liz.jpg" alt="foto da lizandra">
-        <h3 class="estudante-nome">Lizandra</h3>
-        <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-        <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-        <a href="https://www.instagram.com/lizandrarlm"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+    <div class="papel de seda-div">
+        <img class="papel-imagem" src="papel.jpeg" alt="foto do papel de seda">
+        <h3 class="papel-nome">Papel de seda</h3>
     </div>
     <span></span>
     <span></span>
-    <div class="estudante-div">
-        <img class="estudante-imagem" src="Joice.jpg" alt="foto da joice">
-        <h3 class="estudante-nome">Joice</h3>
-        <a href="https://github.com/JoiceAlura"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-        <a href="https://www.linkedin.com/in/joicebarbaresco/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-        <a href="https://www.instagram.com/joicebarbaresco/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+    <div class="comida-div">
+        <img class="comida-imagem" src="meia de seda comida.jpeg" alt="foto da joice">
+        <h3 class="nome da comida-nome">Meia de seda, sobremesa</h3>
     </div>
     <div class="estudante-div">
-        <img class="estudante-imagem" src="Maria.jpg" alt="foto da maria">
-        <h3 class="estudante-nome">Maria</h3>
+        <img class="comida-imagem" src="versatl nos de seda.jpeg" alt="foto da maria">
+        <h3 class="comida-nome">Versátil nós de seda</h3>
         <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png" alt="icone github"></a>
         <a href="https://www.linkedin.com/in/mariageovanna"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
         <a href="https://www.instagram.com/magpsr/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
